[package]
authors = ['Marco Comotti <https://github.com/marcocomo>']
description = 'FRAME pallet template for defining greenchain runtime logic.'
edition = '2021'
#homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'greenchain-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.pallet-greenchain]
default-features = false
git = 'https://github.com/marcocomo/pallet-greenchain'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-greenchain/std'
]
